Wed Feb 15 05:04:47 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/cptr.c (rb_dlptr_aref, rb_dlptr_aset): check NULL pointer
	  dereference.

	* test/rinda/test_rinda.rb: decrease the code that depends on timing.
	  [Bug #372] [Bug #4160]

Wed Feb 15 05:03:41 2012  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* test/rinda/test_rinda.rb (test_remote_array_and_hash):
	  add local variables to protect objects from GC. [ruby-dev:44253]
	  [Bug #5104]

Wed Feb 15 05:02:43 2012  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_err_in_callback.rb (test_err_in_callback): 
	  skip test if ADODB.connection is not available.

Wed Feb 15 04:49:23 2012  Yusuke Endoh  <mame@tsg.ne.jp>

	* parse.y (debug_lines, coverage): set file path encoding for coverage
	  result.  [ruby-dev:44950]

Tue Feb 14 16:57:11 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/rake/file_list.rb (Rake::FileList#egrep): there is no need to
	  open files in binary mode.
	  see more details in https://github.com/jimweirich/rake/issues/74

Tue Feb 14 16:52:17 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/rdoc/encoding.rb (RDoc::Encoding.read_file): fixup newline chars
	  on Windows.
	  see https://github.com/rdoc/rdoc/issues/87

	* test/rdoc/test_rdoc_markup_pre_process.rb
	  (TestRDocMarkupPreProcess#test_include_file, 
	  TestRDocMarkupPreProcess#test_include_file_encoding_incompatible):
	  follow above change.

Tue Feb 14 16:34:11 2012  Shota Fukumori  <sorah@tubusu.net>

	* test/rubygems/test_gem_commands_help_command.rb: Add one
	  `require` because if run test-all with test/unit parallel
	  running, sometimes this test fails by some constants not found.
	  The error reason is some worker doesn't require the file needed by
	  this test. This issue is related to [ruby-core:36168].

Tue Feb 14 15:58:31 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (initial_params): pack in a struct.

	* gc.c (rb_gc_set_params): set parameters always.
	  [ruby-dev:44648] [Bug #5467]
